<resources>
    <string name="app_name">TravelPass</string>
    <string name="please_wait">Please, wait..</string>
    <string name="ok_button">OK</string>
    <string name="menu_credentials" >cabinet</string>
    <string name="menu_menu" >menu</string>
    <string name="menu_contacts" >contacts</string>
    <string name="splash_screen_text" >Identity Credential Management</string>
    <string name="auth_first_title" >Lets get started…</string>
    <string name="auth_first_hint" >Introduce yourself, Enter your name or nickname so that we know how to contact you. This name will be displayed to other members of our system</string>
    <string name="auth_first_hint_name" >First name</string>
    <string name="auth_first_hint_name_or_nick" >Name</string>
    <string name="auth_first_hint_lastname" >Last name</string>
    <string name="auth_next" >Next</string>
    <string name="auth_start" >Start</string>
    <string name="auth_skip" >Skip</string>
    <string name="auth_login" >Login</string>
    <string name="auth_pass" >Password</string>
    <string name="auth_change_label" >Change name</string>


    <string name="auth_second_title" >Welcome, %s</string>
    <string name="auth_second_hint" >Please create a password for your wallet. You will need it if you want to export, import or restore the wallet.</string>
    <string name="auth_second_second_hint" >Please create a login and password for your wallet. You will need it if you want to export, import or restore the wallet.</string>
    <string name="auth_second_hint_phone" >Phone</string>
    <string name="auth_second_hint_email" >Email</string>

    <string name="auth_third_third_title" >Lets secure your identity wallet</string>
    <string name="auth_third_third_hint" >Please write down or take a screenshot of this passphrase. You will need it to access your wallet. </string>

    <string name="auth_third_hint" >You are almost done. Few step above...</string>
    <string name="auth_third_hint_face" >Tap here to enable face id</string>

    <string name="auth_third_identity_hint" >Lets verify your identity</string>
    <string name="auth_third_identity2_hint" >Confirming who you are, using government-issued identification will allow you to accept a variety of digital credentials into your wallet</string>
    <string name="auth_third_identity_btn_yes" >Yes, confirm my identity</string>
    <string name="auth_third_identity_btn_no" >No, do this later</string>

    <string name="auth_third_choose_hint" >Choose an id to upload</string>
    <string name="auth_third_choose_tap_hint" >Tap to select identification type</string>

    <string name="auth_fourth_hint" >AS a backup, choose pin</string>
    <string name="auth_fourth_hint_pin" >Choose 6-digit pin</string>
    <string name="auth_fourth_hint_re_enter_pin" >Re-enter pin</string>

    <string name="action_item_request" >Request!</string>
    <string name="action_item_offer" >Offer!</string>
    <string name="action_item_connect" >Connect?</string>
    <string name="action_item_message" >Message!</string>

    <string name="btn_action_items" >Action items</string>
    <string name="actions_all_done" >All done!</string>

    <string name="title_contacts" >Contacts</string>
    <string name="title_chats" >Chats</string>
    <string name="title_credentials" >Credentials</string>
    <string name="title_cabinet" >Cabinet</string>
    <string name="title_connect" >Connect</string>


    <string name="show_qr_hint" >Allow other users to scan to connect</string>
    <string name="show_qr_open_camera_btn" >Open camera</string>

    <string name="scan_qr_hint" >Scan Contact`s QR Code</string>
    <string name="scan_qr_hint2" >By scanning QR Code, I consent to connect my wallet for the purpose of sending and receiving credentials.</string>
    <string name="btn_scan_qr_do_not_show" >Don`t show this again</string>
    <string name="btn_scan_qr_show_code" >Reveal My Code</string>
    <string name="camera_qr_scan_permission">For scan Qr you need to give permissions</string>


    <string name="validating">Validating...</string>
    <string name="cancel">Cancel</string>

    <string name="details_history">History</string>

    <string name="connected_at">connected</string>
    <string name="issued_at">issued</string>
    <string name="requested_at">requested</string>
    <string name="details">Details</string>
    <string name="filter_date_credential">Date issued</string>
    <string name="filter_date_recent">Recent</string>
    <string name="btn_add_tag">add tag</string>

    <string name="search_hint" >SEARCH</string>



    <string name="action_yes" >Yes</string>
    <string name="action_decline" >Decline</string>
    <string name="action_error" >Error</string>



    <string name="message_connected_successfully" >Connection Approved</string>
    <string name="message_connected_error" >Connection canceled</string>
    <string name="message_offer_successfully" >Credentials accepted</string>
    <string name="message_credentials_offer" >Credentials offered</string>
    <string name="message_credentials_request" >Credentials requested</string>
    <string name="message_credentials_request_declined" >Credentials request declined</string>
    <string name="message_credentials_request_succes" >Credentials approved</string>
    <string name="message_credentials_declined" >Credentials declined</string>
    <string name="message_question_answered" >Question answered</string>
    <string name="message_question_title" >Question</string>

    <string name="tutorial_title_1" >All around the world</string>
    <string name="tutorial_text_1" >Our identity system is recognized all over the world and you can travel with credentials wherever you want  </string>
    <string name="tutorial_title_2" >Secure</string>
    <string name="tutorial_text_2" >We are a member of the SSI(Self-sovereign identity) family, which means that we fully meet their requirements in the field of security and cryptography </string>
    <string name="tutorial_title_3" >Decline</string>
    <string name="tutorial_text_3" >Decline</string>
</resources>