<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sirius.travelpass.ui.credentials.CredentialsViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_yellow_top_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="32dp">



            <TextView
                style="@style/FontMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/title_cabinet"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_gray_top_round"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_account_circle" />

                <TextView
                    android:id="@+id/labelText"
                    style="@style/FontBold"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="Igor"
                    tools:text="Igor" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:tint="@color/blue"

                    android:padding="8dp"
                    android:src="@drawable/ic_details"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/secondHint"
                    style="@style/Regular14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/auth_third_identity2_hint"
                    android:textColor="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/Regular15"
                    android:padding="16dp"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:background="@drawable/btn_green_round"
                    android:text="@string/auth_third_identity_btn_yes"/>

            </LinearLayout>


            <TextView
                style="@style/FontMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_credentials"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="19sp" />


            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
android:visibility="gone"
                android:background="@drawable/btn_gray_round"
                app:queryHint="@string/search_hint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:onClick="@{viewModel::onFilterClick}"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    style="@style/FontRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/filter_date_credential"
                    android:textAllCaps="true"
                    android:textColor="@color/gray_text_hint" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"

                    android:src="@drawable/ic_arrow_down" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/credentialsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/view_items_credentials" />


        </LinearLayout>

    </FrameLayout>
</layout>