<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/gray_bottom"
        android:gravity="center_vertical">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:id="@+id/requestsBtn"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/requestsBtnImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/chatBtn"
                android:layout_weight="1"

                android:layout_marginTop="4dp"
                android:src="@drawable/menu_contacts"
                android:visibility="visible" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/requestsBtnText"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/menu_contacts"/>
        </LinearLayout>





        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/notificationsBtn"
            android:layout_weight="1"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/notificationsBtnImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/menu_menu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/notificationsBtnText"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/menu_menu"/>
            </LinearLayout>




        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cabinetBtn"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cabinetBtnImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/chatBtn"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:src="@drawable/menu_credential"
                android:visibility="visible" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cabinetBtnText"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/menu_credentials"/>
        </LinearLayout>


    </LinearLayout>
</layout>